[package]
name = "bevy_skynet"
version = "0.1.0"
edition = "2024"

[features]
default = ["steam"]
steam = ["dep:steamworks"]

[dependencies]
base62 = "2.2.1"
bevy = "0.16.1"
ciborium = "0.2.2"
parking_lot = "0.12.4"
serde = "1.0.219"
tokio = { version = "1.46.1", features = ["sync", "macros", "rt-multi-thread"] }
xxhash-rust = { version = "0.8.15", features = ["const_xxh64"] }
steamworks = { version = "0.12.1", optional = true }
toml = "0.9.2"

